# teor-info-1lab

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  main.cpp
evgeny-belyaev-lib/: ImageCoder.cpp  ac_dec.cpp  ac_enc.cpp  context.cpp  mcoder.h  stream.h
test_data/: bib-enc-out  book1-enc-out  book2-enc-out  geo-enc-out  news-enc-out  obj1-enc-out  obj2-enc-out  paper1-enc-out  paper2-enc-out  paper3-enc-out  paper4-enc-out  paper5-enc-out  paper6-enc-out  pic-enc-out  progc-enc-out  progl-enc-out  progp-enc-out  test-enc-out  test-enc-out1.txt  test.txt  trans-enc-out
